fix spacing issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -21,6 +21,7 @@
   --color-text-code: #18181b;
   --color-text-icon: #3c4149;
   --color-text-btn: #fafafa;
+  --color-text-link: #38bdf8;
 
   --color-bg-primary: #fafafa;
   --color-bg-secondary: #f4f4f5;
@@ -42,6 +43,7 @@
   --color-text-code: #fafafa;
   --color-text-icon: #c3c4c6;
   --color-text-btn: #18181b;
+  --color-text-link: #38bdf8;
 
   --color-bg-primary: #18181b;
   --color-bg-secondary: #27272a;
